#30 feat : MovieService interface method 선언 및 impl - Movie Serving에 필요한 메소드 선언 및 구현